# bid_evaluation

./: .gitignore  Packaging_Explanation_Bid_Evaluation_Feb2026.docx  README.md  README_STAGED.md  RELEASE.md  app.py  criteria.py  criterior.py  ejemplo_función custom.py  ejemplo_modular.py  example_config.py  example_custom.py  example_fluent.py  example_hybrid.py  example_modular.py  example_simple.py  pyproject.toml  requirements-demos.txt  requirements.txt  sample_bids.xlsx  setup.py  ~$ckaging_Explanation_Bid_Evaluation_Feb2026.docx
bid_evaluation/: __init__.py  criteria.py  custom_templates.py  evaluator.py  staged.py
demos/: streamlit_demo.py  streamlit_staged_demo.py
demos/configs/: my_config.json
examples/: example_config.py  example_custom.py  example_fluent.py  example_hybrid.py  example_simple.py  example_staged.py
tests/: __init__.py  test_criteria.py  test_staged.py
