[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bid-evaluation"
version = "0.1.0"
description = "Open-source bid evaluation library for procurement"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
authors = [
  { name = "David Escobar" }
]
keywords = ["procurement", "bid", "evaluation", "scoring", "ranking"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Office/Business",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
dependencies = [
  "pandas>=1.3.0",
  "numpy>=1.20.0",
  "PyYAML>=5.4.0",
  "openpyxl>=3.0.0",
  "simpleeval>=0.9.13"
]

[project.optional-dependencies]
demos = [
  "streamlit>=1.20.0",
  "altair>=5.0.0",
  "xlsxwriter>=3.1.0"
]
dev = [
  "pytest>=7.0.0",
  "build>=1.2.0",
  "twine>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/escobar-david/bid_evaluation"
Repository = "https://github.com/escobar-david/bid_evaluation"
Issues = "https://github.com/escobar-david/bid_evaluation/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["bid_evaluation*"]
